# Modelo-de-previs-o-de-pre-o-em-Python

./: README.md  app.py  pizzas.csv  pyproject.toml  testes.ipynb
