[tool.poetry]
name = "projeto-ml-pizzas"
version = "0.1.0"
description = ""
authors = ["Luís Paulo da Silva de Siqueira <l.paulo333@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
